crates/ui/src/view/snapshots/tgt_ui__view__root__tests__palette_overlay_draws_over_the_two_pane_arrangement_120x40.snap
---
source: crates/ui/src/view/root.rs
expression: rendered
---
                              │                                                                                         
 CHATS                        │ Alice Müller                                                                            
                              ├─────────────────────────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                                         
                              │ ┌─────────────────────────────────────────────────────────────────────────────────────┐ 
                              │ │                                                                                     │ 
                              │ │                                                                                     │ 
                              │ │                                                                                     │ 
                              ╭──────────────────────── palette ─────────────────────────╮                            │ 
                              │  › al                                                    │                            │ 
                              │  ──────────────────────────────────────────────────────  │                            │ 
                              │  ▏ Alice Müller                                          │                            │ 
                              │    Toggle theme                                     cmd  │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              │                                                          │                            │ 
                              ╰──────────────────────────────────────────────────────────╯                            │ 
                              │ │                                                                                     │ 
                              │ └─────────────────────────────────────────────────────────────────────────────────────┘ 
                              │                                                                                         
                              │ ╭─────────────────────────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                                         │ 
                              │ ╰─────────────────────────────────────────────────────────────────────────────────────╯ 
                                                                                                                        
 type to search   ⏎ run   esc cancel
