crates/ui/src/view/snapshots/tgt_ui__view__root__tests__single_pane_stack_shows_breadcrumb_and_conversation_99x30.snap
---
source: crates/ui/src/view/root.rs
expression: rendered
---
┌ telegram-tui ───────────────────────────────────────────────────────────────────────────────────┐
│telegram ▸ Alice Müller                                                                          │
│┌───────────────────────────────────────────────────────────────────────────────────────────────┐│
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                        no messages yet                                        ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
│└───────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌───────────────────────────────────────────────────────────────────────────────────────────────┐│
││›  message…                                                                                    ││
│└───────────────────────────────────────────────────────────────────────────────────────────────┘│
│↑↓ move   ⏎ open   / filter   ctrl+p palette   ? help                                            │
└─────────────────────────────────────────────────────────────────────────────────────────────────┘
