crates/ui/src/view/snapshots/tgt_ui__view__root__tests__single_pane_stack_shows_full_width_chat_list_99x30.snap
---
source: crates/ui/src/view/root.rs
expression: rendered
---
┌ telegram-tui ───────────────────────────────────────────────────────────────────────────────────┐
│┌CHATS──────────────────────────────────────────────────────────────────────────────────────────┐│
││▸ Alice Müller                                                                                2││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
││                                                                                               ││
│└───────────────────────────────────────────────────────────────────────────────────────────────┘│
│↑↓ move   ⏎ open   / filter   ctrl+p palette   ? help                                            │
└─────────────────────────────────────────────────────────────────────────────────────────────────┘
