crates/ui/src/view/snapshots/tgt_ui__view__root__tests__toast_stack_draws_over_the_frame_120x40.snap
---
source: crates/ui/src/view/root.rs
expression: rendered
---
                              │                                                                                         
 CHATS                        │ Alice Müller                                                                            
                              ├─────────────────────────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                     no messages yet                                     
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │                                                                                         
                              │ ╭──────────────────────────────────────────────────╭──────────────────────────────────╮ 
                              │ │ ›  message…                                      │  Grace Hopper                    │ 
                              │ ╰──────────────────────────────────────────────────│  the compiler is done            │ 
                                                                                   ╰──────────────────────────────────╯ 
 ⏎ send   alt+⏎ newline   ↑ select messages
