crates/ui/src/view/snapshots/tgt_ui__view__root__tests__two_pane_arrangement_at_breakpoint_100x30.snap
---
source: crates/ui/src/view/root.rs
expression: rendered
---
                              │                                                                     
 CHATS                        │ Alice Müller                                                        
                              ├─────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                     
                              │ ┌─────────────────────────────────────────────────────────────────┐ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                         no messages yet                         │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ └─────────────────────────────────────────────────────────────────┘ 
                              │                                                                     
                              │ ╭─────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                     │ 
                              │ ╰─────────────────────────────────────────────────────────────────╯ 
                                                                                                    
 ⏎ send   alt+⏎ newline   ↑ select messages
